<?xml version="1.0"?>
<package format="3">
  <name>rqt_fake_gnss</name>
  <version>0.0.1</version>
  <description>The rqt_fake_gnss package</description>
  <maintainer email="fumihito.ito@tier4.jp">Fumihito Ito</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
